[gd_scene load_steps=11 format=3 uid="uid://c8oqxmm2w2wvv"]

[ext_resource type="Script" path="res://world.gd" id="1_6tkge"]
[ext_resource type="PackedScene" uid="uid://c1j7an8woikyd" path="res://environment.tscn" id="1_iktak"]
[ext_resource type="Texture2D" uid="uid://blcx5qchnbv62" path="res://sky/Epic_BlueSunset_EquiRect_flat.png" id="2_g18bx"]
[ext_resource type="Texture2D" uid="uid://8ka2ui7sq36p" path="res://addons/kenney_particle_pack/circle_05.png" id="3_ehmxv"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_ptl5n"]
panorama = ExtResource("2_g18bx")

[sub_resource type="Sky" id="Sky_w2qqb"]
sky_material = SubResource("PanoramaSkyMaterial_ptl5n")

[sub_resource type="Environment" id="Environment_6knbf"]
background_mode = 2
sky = SubResource("Sky_w2qqb")
ambient_light_source = 3
tonemap_mode = 2
ssr_enabled = true
ssao_enabled = true
ssil_enabled = true
sdfgi_enabled = true
sdfgi_use_occlusion = true
glow_enabled = true
volumetric_fog_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_5218t"]
auto_exposure_enabled = true
dof_blur_far_enabled = true
dof_blur_far_distance = 35.0
dof_blur_far_transition = 73.85

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujyws"]
bg_color = Color(1, 0.117647, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmecq"]
bg_color = Color(0.00392157, 1, 0, 1)

[node name="World" type="Node"]
script = ExtResource("1_6tkge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6knbf")
camera_attributes = SubResource("CameraAttributesPractical_5218t")

[node name="Environment" parent="." instance=ExtResource("1_iktak")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 423.0
offset_top = 227.0
offset_right = -423.0
offset_bottom = -227.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.485
anchor_right = 0.515
anchor_bottom = 0.515
offset_left = -558.72
offset_top = -314.28
offset_right = 558.72
offset_bottom = 314.28
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("3_ehmxv")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.108
anchor_right = 0.714
anchor_bottom = 0.173
offset_left = 0.527985
offset_top = 0.0159988
offset_right = -0.528076
offset_bottom = -0.104004
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ujyws")
theme_override_styles/fill = SubResource("StyleBoxFlat_cmecq")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="Pause_Menu" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="Pause_Menu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Pause_Menu/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="Pause_Menu/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.309
anchor_right = 0.583
anchor_bottom = 0.383
offset_left = -0.384033
offset_top = -0.23201
offset_right = 0.383972
offset_bottom = -0.184006
text = "Resume"

[node name="Quit" type="Button" parent="Pause_Menu/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.407
anchor_right = 0.583
anchor_bottom = 0.481
offset_left = -0.384033
offset_top = 0.264008
offset_right = 0.383972
offset_bottom = 0.311981
text = "Quit"

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
[connection signal="pressed" from="Pause_Menu/Control/Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause_Menu/Control/Panel/Quit" to="." method="_on_quit_pressed"]
